Project2/force-app/main/default/objects/Pokemon__c/fields/BaseXP__c.field-meta.xml
<CustomField>
    <fullName>BaseXP__c</fullName>
    <label>BaseXP</label>
    <length>10</length>
    <type>Text</type>
</CustomField>