Project2/force-app/main/default/objects/Pokemon__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Order</label>
    <length>10</length>
    <type>Text</type>
</CustomField>