Project2/force-app/main/default/objects/Pokemon__c/fields/PokeId__c.field-meta.xml
<CustomField>
    <fullName>PokeId__c</fullName>
    <label>PokeId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>